<resources>
    <string name="app_name">Clinic Advisor (Test2)</string>
    <string name="CreateAnAccount">Create an account</string>
    <string name="Login">Log in</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="skip">Skip</string>

    <!-- Strings for create account page-->
    <string name="accountForClinic">Create account for clinic</string>
    <string name="accountForUser">Create account for user</string>

    <!-- Strings for create account for user-->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Enter Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="singup">Sing Up</string>

    <!-- string for user account-->
    <string name="save">Save</string>
    <string name="Log_out">Log out</string>

    <!-- string for clinic account-->
    <string name="clinic_name">Clinic Name</string>
    <string name="add_offers">Add offer</string>

    <!-- string for clinic offers-->
    <string name="details">Details</string>
    <string name="offrs_name">offers name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="myaccounr">My account</string>

    <!--home page strings-->
    <string name="search_icon">search</string>
    <string name="title_activity_main_clinicinfo">MainClinicinfoActivity</string>
    <string name="m1" />
    <string name="clinic_offers_details">clinic_offers_details</string>
    <string name="title_activity_main_clinicfeedback">MainClinicfeedbackActivity</string>
    <string name="Clinic_Description">clinic description</string>
    <string name="work_time">Work Time</string>
    <string name="map_view">Location</string>
    <string name="clinic_num">Contact Number</string>
    <string name="clinic_email">Email</string>
    <string name="feedback">Feedback</string>

</resources>
