<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2cdcd"
    tools:context="com.example.se7en.clinicadvisortest2.CreateAccountPage">

    <!--Afnan Afnan-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="253dp"
        android:layout_marginBottom="69dp"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoo" />

    <Button
        android:id="@+id/button5"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:layout_marginBottom="23dp"
        android:onClick="On_Clinic"
        android:text="@string/accountForClinic"
        android:background="@drawable/button"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:layout_marginBottom="75dp"
        android:onClick="On_User"
        android:text="@string/accountForUser"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>
