<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2cdcd"
    tools:context="com.example.se7en.clinicadvisortest2.CreateAccountForUser"
    tools:layout_editor_absoluteY="81dp">

    <!--Afnan Afnan-->


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="485dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="380dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="59dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="114dp"
                    android:layout_height="32dp"
                    android:text="@string/firstname"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="16dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="124dp"
                    android:layout_height="35dp"
                    android:text="@string/lastname"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="73dp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="73dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="68dp"
                    android:layout_height="43dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="22dp"
                    tools:layout_editor_absoluteY="128dp" />

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="128dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="74dp"
                    android:layout_height="29dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="194dp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="194dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="70dp"
                    android:layout_height="27dp"
                    android:text="@string/password"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="265dp" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="253dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="126dp"
                    android:layout_height="59dp"
                    android:text="@string/repassword"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="306dp" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="306dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="62dp"
                    android:layout_height="34dp"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="383dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="277dp"
                        tools:layout_editor_absoluteY="383dp" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="153dp"
                        tools:layout_editor_absoluteY="383dp" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="singUp"
                android:text="@string/singup" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
