<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.se7en.clinicadvisortest2.MainClinicinfoActivity"
    tools:showIn="@layout/activity_main_clinicinfo">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="214dp"
        android:layout_height="91dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/m1"
        app:layout_constraintBottom_toTopOf="@+id/editText27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clinicadvisorlogo" />

    <ImageSwitcher
        android:id="@+id/imageSwitcher3"
        android:layout_width="375dp"
        android:layout_height="110dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="273dp"
        android:contentDescription="@string/clinic_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/clinic_name"
        app:layout_constraintBottom_toTopOf="@+id/editText28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        android:layout_marginRight="273dp" />

    <EditText
        android:id="@+id/editText28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="273dp"
        android:contentDescription="@string/offrs_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/offrs_name"
        app:layout_constraintBottom_toTopOf="@+id/editText29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText27"
        android:layout_marginRight="273dp" />

    <EditText
        android:id="@+id/editText29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:contentDescription="@string/clinic_offers_details"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/clinic_offers_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editText28"
        app:layout_constraintTop_toBottomOf="@+id/editText28" />

</android.support.constraint.ConstraintLayout>
