<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2cdcd"
    tools:context="com.example.se7en.clinicadvisortest2.create_account_for_clinic">

    <!--Walaa Walaa Walaa Walaa-->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="114dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="73dp"
            android:text="@string/clinic_name" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="114dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/editText14"
            android:layout_alignStart="@+id/editText14"
            android:layout_below="@+id/editText14"
            android:layout_marginTop="14dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="114dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/editText15"
            android:layout_alignStart="@+id/editText15"
            android:layout_below="@+id/editText15"
            android:layout_marginTop="14dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editText17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="129dp"
            android:layout_height="32dp"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/editText17"
            android:layout_marginTop="16dp"
            android:text="@string/repassword" />

        <EditText
            android:id="@+id/editText18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText17"
            android:layout_alignRight="@+id/editText17"
            android:layout_below="@+id/textView11"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/textView10"
            android:layout_toRightOf="@+id/textView10"
            android:text="@string/singup" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
