<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.se7en.clinicadvisortest2.offerspage"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/imageSwitcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoo2" />

    <EditText
        android:id="@+id/editText24"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/clinic_name"
        app:layout_constraintBottom_toTopOf="@+id/editText25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageSwitcher"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText25"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginBottom="72dp"
        android:layout_marginTop="67dp"
        android:background="@drawable/text"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/offrs_name"
        app:layout_constraintBottom_toBottomOf="@+id/editText26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText26"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/text"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="33dp"
        android:contentDescription="@string/offrs_name"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/editText24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSwitcher"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="33dp"
        android:contentDescription="@string/offrs_name"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toStartOf="@+id/editText25"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginRight="9dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="49dp"
        android:layout_height="39dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="33dp"
        android:contentDescription="@string/details"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/editText26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="33dp" />

    <ImageSwitcher
        android:id="@+id/imageSwitcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

    </ImageSwitcher>

</android.support.constraint.ConstraintLayout>
